--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,24 +1,54 @@
-name: Playwright Tests
+name: Full QA Pipeline
+
 on:
   push:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
+
+    # ---------------------------
+    # Setup Python for API + SQL
+    # ---------------------------
+    - name: Setup Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
+    - name: Install Python dependencies
+      run: |
+        pip install -r requirements.txt
+
+    - name: Run API and SQL tests
+      run: pytest
+
+    # ---------------------------
+    # Setup Node for Playwright
+    # ---------------------------
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
       with:
         node-version: lts/*
-    - name: Install dependencies
+
+    - name: Install Node dependencies
       run: npm ci
+
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+
     - name: Run Playwright tests
       run: npx playwright test
+
+    # ---------------------------
+    # Upload Playwright Report
+    # ---------------------------
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
